--- a/waybar/style.css
+++ b/waybar/style.css
@@ -11,8 +11,11 @@ window#waybar {
   border-radius: 0px;
 }
 
-
-/* Optional slight hover for others */
-#pulseaudio:hover, #clock:hover, #custom-power:hover {
+/* Hover highlight */
+#pulseaudio:hover, 
+#clock:hover, 
+#custom-power:hover,
+#custom-clipboard:hover,
+#custom-notifications:hover {
   background-color: rgba(126, 107, 71, 0.1); /* subtle gold hover */
 }
